<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item
       android:id="@+id/mainmenu"
       android:title="@string/main_menu">
       <menu >
           <item
               android:id="@+id/mainprofile_menu"
               android:title="@string/mainprofile_menu"
               ></item>
           <item
               android:id="@+id/mainavator_menu"
               android:title="@string/mainavatar_menu" />
       </menu>
   </item>

    <item
        android:id="@+id/editmenu"
        android:title="@string/edit_menu">
        <menu>
            <item
                android:id="@+id/editprofile_menu"
                android:title="@string/editprofile_menu"
                ></item>
            <item
                android:id="@+id/editavator_menu"
                android:title="@string/editprofile_menu"
                ></item>
        </menu>

    </item>

</menu>